css/style.css
/* ... */
.contact-container .contact-quote .contact-logo {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	font-size: 2.5rem;
	color: #E3CD70;
	font-weight: bold;
}

.contact-container .contacts {
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.contact-container .contacts .contacts-row {
	display: flex;
	flex-direction: row;
	justify-content: center;
}


.contact-container .contacts .contact-item {
	position: relative;
	width: 20vw;
	border-left: 2px solid #ccc;
	padding: 1rem;
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.contact-container .contacts .contact-item * {
	margin: 4px 0;
}


.contact-container .contacts .contact-item::before {
	content: "";
	position: absolute;
	top: 4.25rem;
	left: 0;
	transform: translate(-64%, 0%);
	width: 6px;
	height: 20px;
	background-color: #E3CD70;
	border-radius: 1rem;
}

.contact-container .contacts .contact-item .contact-title {
	font-size: 1rem;
	font-weight: bold;
}

.contact-container .contacts .contact-item .contact-description a {
	position: relative;
	color: #ffffff;
	text-decoration: none;
	transition: all 0.2s;
}

.contact-container .contacts .contact-item .contact-description a:after{
	position: absolute;
	content: "≻";
	display: block;
	top: 50%;
	right: -14px;
	transform: translate(0%, -50%);
	transition: all 0.4s;
}

.contact-container .contacts .contact-item .contact-description a:hover{
	color: #E3CD70;
}

.contact-container .contacts .contact-item .contact-description a:hover:after{
	content: "-≻";
	right: -22px;
}




/*
#262626
#1A1A1A
#121212
*/





footer {
	padding: 0.5rem;
	display: flex;
	flex-direction: column;
	color: white;
	background-color: #ffffff;
	background-color: #1F232F;
	text-align: center;
}



/*
* Custom ms classes
*/

.ms-anchor {
	color: #ffffff;
	font-size: 1rem;
	font-weight: bold;
	text-decoration: none;
}

.ms-btn-skewe {
	padding: 0.4rem 0.5rem;
	margin: 0 0.75rem;
	background-color: #000000;
	border: 1px solid #4d4d4d;
	border-radius: 1rem;
	transition:
		background var(--trans-dur) var(--trans-timing),
		border var(--trans-dur) var(--trans-timing);
}

.ms-btn-skewe:hover {
	border: 1px solid #fff;
	background-color: #212121;
}

.container {
	height: 100%;
	width: 100%;
	margin-left: auto;
	margin-right: auto;
	max-width: 80rem;
	padding-left: 2rem;
	padding-right: 2rem;
	display: flex;
	flex-direction: column;
	justify-content: stretch;
}

.button-86 {
	all: unset;
	width: 100px;
	height: 30px;
	font-size: 16px;
	background: transparent;
	border: none;
	position: relative;
	color: #f0f0f0;
	cursor: pointer;
	z-index: 1;
	padding: 10px 20px;
	display: flex;
	align-items: center;
	justify-content: center;
	white-space: nowrap;
	user-select: none;
	-webkit-user-select: none;
	touch-action: manipulation;
}

.button-86::after,
.button-86::before {
	content: '';
	position: absolute;
	bottom: 0;
	right: 0;
	z-index: -99999;
	transition: all .4s;
}

.button-86::before {
	transform: translate(0%, 0%);
	width: 100%;
	height: 100%;
	background: #28282d;
	border-radius: 10px;
}

.button-86::after {
	transform: translate(10px, 10px);
	width: 35px;
	height: 35px;
	background: #ffffff15;
	backdrop-filter: blur(5px);
	-webkit-backdrop-filter: blur(5px);
	border-radius: 50px;
}

.button-86:hover::before {
	transform: translate(5%, 20%);
	width: 110%;
	height: 110%;
}

.button-86:hover::after {
	border-radius: 10px;
	transform: translate(0, 0);
	width: 100%;
	height: 100%;
}

.button-86:active::after {
	transition: 0s;
	transform: translate(0, 5%);
}



html, body {
	margin: 0;
	padding: 0;
}
body {
	overflow-x: hidden; 
}

@media (max-width: 992px) {
	main #hero {
		min-height: auto;
	}

	main .hero {
		flex-direction: column;
		height: auto;
		min-height: auto;
	}

	main .hero .hero-left {
		min-height: 45vh;
		width: 100%;
		align-items: center;
		justify-content: space-between;
		margin: 1rem auto;
	}
	main .hero .hero-left .quote {
		margin-top: 1rem;
	}
	
	main .hero .hero-right {
		min-height: 45vh;
		width: 100%;
	}

	.image-comparison {
		width: 100vw;
	}

	#projects {
		min-height: auto;
	}

	#projects h2 {
		margin: 1rem auto;
	}

	#projects .projects {
		flex-direction: column;
		align-items: center;
	}

	#projects .projects .project {
		width: 80%;
		min-width: 300px;
		max-width: 500px;
		margin: 1rem auto;
	}

	#services {
		min-height: auto;
	}

	#services .services {
		flex-direction: column;
		align-items: center;
	}

	#services .services .service {
		width: 80%;
		padding: 0 1rem;
		min-width: 300px;
		max-width: 500px;
		margin: 1rem auto;
		text-align: center;
		align-items: center;
	}
	
	#services .services .service .service-title {
		width: 100%;
		justify-content: center;
		text-align: center;
	}

	#contact {
		background-image: url("../img/golden-frame-blue-vert.JPG");
	}
	.contact-container {
		flex-direction: column;
		max-width: 95vw;
	}

	.contact-container .contact-quote {
		width: 100%;
	}

	.contact-container .contacts .contact-item .contact-line {
		display: none;
	}

	.contact-container .contacts .contacts-row {
		display: flex;
		flex-direction: row;
		justify-content: space-around;
	}
}

